# aeon-interview-eye-tracker

./: README.md  render.yaml
backend/: .gitignore  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  services.py  setup.sh  test_api.py  utils.py
camera-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
camera-app/src/: App.css  App.tsx  index.css
camera-app/src/components/: Calibration.tsx  LiveTracking.tsx  Playback.tsx  PlaybackTab.tsx  RecordTab.tsx  WebcamDebugger.tsx
camera-app/src/config/: api.ts
camera-app/src/store/: appSlice.ts  eyeTrackingSlice.ts  index.ts  playbackSlice.ts  videoStreamSlice.ts  webSocketSlice.ts
camera-app/src/types/: index.ts
camera-app/src/utils/: positionCalculations.ts
